Add image upload to form. Add logic to save image as string. Add base64 helper. Decode image received in api endpoint

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,8 +17,10 @@
   </div>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.text_field :image, id: :user_image %>
+    <%= form.label :image_file %>
+    <%= form.file_field :image_file, id: :user_image_file, multiple: false,
+     accept:'image/png', class: 'form-control' %>
+     <%= form.hidden_field :image, :value => "stub" %>
   </div>
 
   <div class="actions">
