Edit user form. Removed unused files

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,7 +27,7 @@
     <%= form.label :image_file %>
     <%= form.file_field :image_file, id: :user_image_file, multiple: false,
      accept:'image/png', class: 'form-control' %>
-     <%= form.hidden_field :image, :value => "stub" %>
+     <%= form.hidden_field :image, :value => "place_holder" %>
   </div>
 
   <div class="actions">
