--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,25 @@
-<p id="notice"><%= notice %></p>
 <h1>Users</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-inverse">
     <tr>
-      <th>Email</th>
-      <th>Image</th>
-      <th colspan="3"></th>
+      <th colspan="4">Email</th>
+      <th colspan="4">Image</th>
+      <th colspan="4">Actions</th>
     </tr>
   </thead>
-
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.email %></td>
-        <td><%= image_tag "data:image/png;base64,#{user.image}", :class => "resize" %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td colspan="4"><%= user.email %></td>
+        <td colspan="4"><%= image_tag "data:image/png;base64,#{user.image}", :class => "resize" %></td>
+        <td colspan="4">
+          <%= link_to 'Edit', edit_user_path(user) %>
+          <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
 
 <%= link_to 'New User', new_user_path %>
